Created computer choice, forms and event listener

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Vite App</title>
   </head>
   <body>
+    <h1>Rock Paper Scissors</h1>
+    <form action="/action_page.php">
+      <label for="game">Rock/Paper/Scissors</label>:</label><br />
+      <input type="text" id="choice" name="choice" value="choose one..." /><br />
+      <input type="submit" id="submit" value="Submit" />
+    </form>
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
