Added game logic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Rock Paper Scissors</h1>
     <form action="/action_page.php">
-      <label for="game">Rock/Paper/Scissors</label>:</label><br />
+      <label for="game">Open the console to play</label>:</label><br />
       <input type="text" id="choice" name="choice" value="choose one..." /><br />
       <input type="submit" id="submit" value="Submit" />
     </form>
