--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <input type="text" id="choice" name="choice" value="choose one..." /><br />
       <input type="submit" id="submit" value="Submit" />
     </form>
+    <div class="score">
+  
+    </div>
 
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
