--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <title>Vite App</title>
   </head>
   <body>
-    <h1>Rock Paper Scissors</h1>
+  <div class="form">
     <form action="/action_page.php">
       <label for="game">Open the console to play</label>:</label><br />
       <input type="text" id="choice" name="choice" value="choose one..." /><br />
       <input type="submit" id="submit" value="Submit" />
     </form>
+  </div>
     <div class="score">
-  
-    </div>
-
-    <div id="app"></div>
+     
+    </div>  
+    <!-- <div id="app"></div> -->
     <script type="module" src="/main.js"></script>
   </body>
 </html>
