--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
       <input type="submit" id="submit" value="Submit" />
     </form>
   </div>
-    <div class="score">
-     
-    </div>  
+  <div class="btn-choice">
+   <button class="btn">Rock</button>
+   <button class="btn">Paper</button>
+   <button class="btn">Scissors</button>
+  </div>
+    <div class="score"></div> 
     <!-- <div id="app"></div> -->
     <script type="module" src="/main.js"></script>
   </body>
