Attached DOM to buttons

--- a/index.html
+++ b/index.html
@@ -7,19 +7,12 @@
     <title>Vite App</title>
   </head>
   <body>
-  <div class="form">
-    <form action="/action_page.php">
-      <label for="game">Open the console to play</label>:</label><br />
-      <input type="text" id="choice" name="choice" value="choose one..." /><br />
-      <input type="submit" id="submit" value="Submit" />
-    </form>
-  </div>
-  <div class="btn-choice">
-   <button class="btn">Rock</button>
-   <button class="btn">Paper</button>
-   <button class="btn">Scissors</button>
-  </div>
-    <div class="score"></div> 
+    <div class="btn-choice">
+      <button class="btn-rock">Rock</button>
+      <button class="btn-paper">Paper</button>
+      <button class="btn-scissors">Scissors</button>
+    </div>
+    <div class="score"></div>
     <!-- <div id="app"></div> -->
     <script type="module" src="/main.js"></script>
   </body>
