Colour change on win state

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <button class="btn-paper">Paper</button>
       <button class="btn-scissors">Scissors</button>
     </div>
-    <div class="score"></div>
+    <div class="score">
+      <h1>First to 5 points wins, good luck!</h1>
+    </div>
     <!-- <div id="app"></div> -->
     <script type="module" src="/main.js"></script>
   </body>
